--- a/Startup/my-app/app/globals.css
+++ b/Startup/my-app/app/globals.css
@@ -33,6 +33,19 @@ button {
   background-image: linear-gradient(-180deg, #1D95C9 0%, #17759C 100%);
 }
 
+.form-input {
+  display: block;
+  text-align: center;
+  margin: auto;
+  margin-bottom: 1.5rem;
+}
+
+.label-input {
+  display: block;
+  text-align: center;
+  margin: auto;
+}
+
 @media (min-width: 768px) {
   .button-43 {
     padding: 1rem 2rem;
