--- a/Startup/my-app/app/globals.css
+++ b/Startup/my-app/app/globals.css
@@ -51,3 +51,30 @@ button {
     padding: 1rem 2rem;
   }
 }
+
+/* CSS */
+.button-12 {
+  background-image: linear-gradient(-180deg, #37AEE2 0%, #1E96C8 100%);
+  border-radius: .5rem;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  font-size: 16px;
+  justify-content: center;
+  padding: 1rem 1.75rem;
+  text-decoration: none;
+  border: 0;
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  text-align: center;
+  margin: auto;
+  margin-top: 2rem;
+}
+
+.button-12:hover {
+  background-image: linear-gradient(-180deg, #1D95C9 0%, #17759C 100%);
+}
+
+
+
