--- a/Startup/my-app/app/globals.css
+++ b/Startup/my-app/app/globals.css
@@ -60,7 +60,6 @@ button {
   color: #FFFFFF;
   font-size: 16px;
   justify-content: center;
-  padding: 1rem 1.75rem;
   text-decoration: none;
   border: 0;
   cursor: pointer;
@@ -74,6 +73,18 @@ button {
 
 .button-12:hover {
   background-image: linear-gradient(-180deg, #1D95C9 0%, #17759C 100%);
+}
+
+.ol {
+  outline-style: solid;
+}
+
+.margin0 {
+  margin: 0
+}
+
+.marginTop {
+  margin-top: 4.5%;
 }
 
 
