--- a/Startup/my-app/app/globals.css
+++ b/Startup/my-app/app/globals.css
@@ -1,6 +1,3 @@
-div {
-
-}
 
 h1 {
   text-align: center;
@@ -78,10 +75,6 @@ button {
   background-image: linear-gradient(-180deg, #1D95C9 0%, #17759C 100%);
 }
 
-.outline {
-  outline-style: solid;
-}
-
 .margin0 {
   margin: 0
 }
@@ -136,4 +129,40 @@ button {
   width: 100%;
   height: 100%;
 }
+
+html {
+    /* Height and width fallback for older browsers. */
+    height: 100%;
+    width: 100%;
+
+    /* Set the height to match that of the viewport. */
+    height: 100vh;
+
+    /* Set the width to match that of the viewport. */
+    width: 100vw;
+
+    /* Remove any browser-default margins. */
+    margin: 0;
+}
+
+.outline {
+  border-style: solid;
+}
+
+html {
+  height: 100%;
+}
+
+html {
+  min-height: 100%;    
+  margin: 0px;    
+  padding: 0px;
+  border: solid darkgreen;
+  box-sizing: border-box;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 
