--- a/Startup/my-app/app/globals.css
+++ b/Startup/my-app/app/globals.css
@@ -66,10 +66,10 @@ html {
   border-radius: .5rem;
   box-sizing: border-box;
   color: #FFFFFF;
-  font-size: 16px;
+  /* font-size: 16px; */
   justify-content: center;
   text-decoration: none;
-  border: 0;
+  border: 1;
   cursor: pointer;
   user-select: none;
   -webkit-user-select: none;
@@ -123,7 +123,7 @@ html {
   border-radius: .5rem;
   box-sizing: border-box;
   color: #FFFFFF;
-  font-size: 16px;
+  /* font-size: 16px; */
   justify-content: center;
   text-decoration: none;
   border: 0;
