--- a/Startup/my-app/app/globals.css
+++ b/Startup/my-app/app/globals.css
@@ -1,6 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 h1 {
   text-align: center;
@@ -50,7 +47,10 @@ html {
   transition: 0.3s ease;
   border-radius: 5px; /* 5px rounded corners */
   padding: 1rem 1rem;
-  background-color: cyan;
+  background-image: url("../images/colorForCards1.png");
+  background-size: cover;
+  background-repeat: repeat-x;
+  background-position-y: bottom;
   border-width: 0;
   
 }
@@ -84,7 +84,10 @@ html {
   transition: 0.3s ease;
   border-radius: 5px; /* 5px rounded corners */
   padding: 1rem 1rem;
-  background-color: cyan;
+  background-image: cyan;
+  background-size: cover;
+  background-repeat: repeat-x;
+  background-position-y: bottom;
   border-width: 0;
   
 }
@@ -195,6 +198,10 @@ html {
   width:100%
 }
 
+.cardUp {
+  transform: translateY(-20px); /* Moves the button 10px up */
+}
+
 .card {
   /* Add shadows to create the "card" effect */
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
@@ -208,8 +215,7 @@ html {
 
 /* On mouse-over, add a deeper shadow */
 .cardHover:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.4);
-  transform: translateY(-20px); /* Move button 10px upwards */
+
 }
 
 /* Add some padding inside the card container */
