--- a/Startup/my-app/app/globals.css
+++ b/Startup/my-app/app/globals.css
@@ -212,6 +212,25 @@ html {
   border-width: 0;
   
 }
+.container2 {
+  display: flex;
+  flex-direction: column;
+  gap: 10px; /* Optional: space between buttons */
+  margin: 10rem;
+}
+
+button {
+  padding: 10px;
+  font-size: 16px;
+}
+
+.input-for-session {
+  width: 30rem; /* Adjust the width to your preference */
+  height: 10rem; /* You can adjust the height as well */
+  font-size: 16px; /* Increase the text size inside the input */
+  box-sizing: border-box; /* Ensures padding and border are included in the total width/height */
+}
+
 
 
 /* Add some padding inside the card container */
