--- a/Startup/my-app/app/globals.css
+++ b/Startup/my-app/app/globals.css
@@ -41,6 +41,10 @@ html {
   background-image: linear-gradient(-180deg, #1D95C9 0%, #17759C 100%);
 }
 
+.textarea-class {
+  font-size: 20px;
+}
+
 .card1 {
   /* Add shadows to create the "card" effect */
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
