--- a/Startup/my-app/app/globals.css
+++ b/Startup/my-app/app/globals.css
@@ -51,7 +51,7 @@ html {
   transition: 0.3s ease;
   border-radius: 5px; /* 5px rounded corners */
   padding: 1rem 1rem;
-  background-image: url("../images/colorForCards1.png");
+  background-color: cyan;
   background-size: cover;
   background-repeat: repeat-x;
   background-position-y: bottom;
@@ -65,7 +65,7 @@ html {
   transition: 0.3s ease;
   border-radius: 5px; /* 5px rounded corners */
   padding: 1rem 1rem;
-  background-image: linear-gradient(90deg, cyan ,  rgb(1, 1, 1, .1));
+  background-color: cyan;
   border-width: 0;
   
   
@@ -77,7 +77,7 @@ html {
   transition: 0.3s ease;
   border-radius: 5px; /* 5px rounded corners */
   padding: 1rem 1rem;
-  background-color: cyan;
+  background-color: lightGreen;
   border-width: 0;
   
 }
@@ -88,7 +88,8 @@ html {
   transition: 0.3s ease;
   border-radius: 5px; /* 5px rounded corners */
   padding: 1rem 1rem;
-  background-image: cyan;
+  background-color: lightGreen;
+  background-image: green;
   background-size: cover;
   background-repeat: repeat-x;
   background-position-y: bottom;
@@ -102,7 +103,7 @@ html {
   transition: 0.3s ease;
   border-radius: 5px; /* 5px rounded corners */
   padding: 1rem 1rem;
-  background-color: cyan;
+  background-color: rgb(248, 189, 79);
   border-width: 0;
   
 }
@@ -113,7 +114,7 @@ html {
   transition: 0.3s ease;
   border-radius: 5px; /* 5px rounded corners */
   padding: 1rem 1rem;
-  background-color: cyan;
+  background-color: rgb(248, 189, 79);
   border-width: 0;
   
 }
@@ -124,7 +125,7 @@ html {
   transition: 0.3s ease;
   border-radius: 5px; /* 5px rounded corners */
   padding: 1rem 1rem;
-  background-color: cyan;
+  background-color: rgb(248, 189, 79);
   border-width: 0;
   
 }
@@ -135,7 +136,7 @@ html {
   transition: 0.3s ease;
   border-radius: 5px; /* 5px rounded corners */
   padding: 1rem 1rem;
-  background-color: cyan;
+  background-color: violet;
   border-width: 0;
   
 }
@@ -146,7 +147,7 @@ html {
   transition: 0.3s ease;
   border-radius: 5px; /* 5px rounded corners */
   padding: 1rem 1rem;
-  background-color: cyan;
+  background-color: grey;
   border-width: 0;
   
 }
@@ -220,7 +221,6 @@ html {
   display: flex;
   flex-direction: column;
   gap: 10px; /* Optional: space between buttons */
-  margin: 10rem;
 }
 
 button {
