--- a/Startup/my-app/app/globals.css
+++ b/Startup/my-app/app/globals.css
@@ -141,6 +141,11 @@ html {
   
 }
 
+.latin-font {
+  font-family: 'Intern', sans-serif; /* Replace with the font's actual family name */
+}
+
+
 .cardPass {
   /* Add shadows to create the "card" effect */
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
